Removed line height bug on mobile devices

--- a/development/main.css
+++ b/development/main.css
@@ -356,7 +356,6 @@ Normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
  */
 
  html {
-    line-height: 1.15; /* 1 */
     -webkit-text-size-adjust: 100%; /* 2 */
   }
   
@@ -483,7 +482,6 @@ Normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
    textarea {
      font-family: inherit; /* 1 */
      font-size: 75%; /* 1 */
-     line-height: 1.15; /* 1 */
    }
   
   /**
